# LLM-Geo

./: .gitignore  Direct_request_LLM.ipynb  LLM_Geo_API4.ipynb  README.md  pyproject.toml  test_code.py
llm_geo/: LLM_Geo_Constants.py  LLM_Geo_kernel.py  LLM_unit_test.py  __init__.py  helper.py
