[project]
name = "llm-geo"
version = "0.1.0"
description = "Autonomous GIS: the next-generation AI-powered GIS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.5",
    "async-timeout>=4.0.3",
    "certifi>=2024.7.4",
    "frozenlist>=1.4.1",
    "ipython-genutils>=0.2.0",
    "jsonpickle>=3.2.2",
    "multidict>=6.0.5",
    "munkres>=1.1.4",
    "numpy>=2.1.0",
    "openai>=1.42.0",
    "pyvis>=0.3.2",
    "pywin32>=306",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.2",
    "tqdm>=4.66.5",
    "ipykernel>=6.29.5",
    "requests>=2.32.3",
    "pyproj>=3.6.1",
    "pyogrio>=0.9.0",
    "shapely>=2.0.4",
    "geopandas>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
